@@ -9,6 +9,8 @@
 	* dvi.c (dvi_locate_native_font): fix loading TTC fonts.
 	* xdvipdfm-ttc.test, tests/ttc.dvi, tests/ttc.tex, tests/test.ttc,
 	Makefile.am: new test.
+	* dvi.c (dvi_locate_native_font): correctly load vertical glyph
+	metrics.
 
 2015-02-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
